# backhaul

./: .env.example  .gitignore  CLAUDE.md  README.md  STACK_CONFIG.md
apps/agent/: .env.example  Dockerfile  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
apps/agent/app/: config.py  main.py
apps/agent/app/api/: health.py  runs.py  stream.py
apps/agent/app/db/: client.py
apps/agent/app/graph/: state.py  topology.py
apps/agent/app/graph/nodes/: __init__.py  audit.py  customer_comms.py  customer_history.py  damage_signal.py  decision.py  escalation.py  fraud_flag.py  intake.py  marketplace_policy.py  sku_profile.py
apps/agent/app/workers/: donate_dispose.py  refund.py  refurb.py  repair.py  replacement.py
apps/agent/evals/audit/: test_audit.py
apps/agent/evals/customer_comms/: test_customer_comms.py
apps/agent/evals/customer_history/: test_customer_history.py
apps/agent/evals/damage_signal/: test_damage_signal.py
apps/agent/evals/decision/: test_decision.py
apps/agent/evals/escalation/: test_escalation.py
apps/agent/evals/fraud_flag/: test_fraud_flag.py
apps/agent/evals/intake/: test_intake.py
apps/agent/evals/marketplace_policy/: test_marketplace_policy.py
apps/agent/evals/sku_profile/: test_sku_profile.py
apps/agent/fixtures/: carrier_rates.json  customers.json  eval_golden_cases.json  orders.json  returns.json  skus.json
apps/agent/prompts/: customer_comms_v1.md  damage_signal_v1.md  decision_v1.md  intake_v1.md
apps/agent/tests/: test_graph_stub.py  test_health.py
docs/: 00-discovery.md  01a-architecture.md  (+9 more)
(+69 files in other folders)
